Fix: Fixed navbar transition bug on mobile devices

--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -52,20 +52,21 @@
 .header__nav {
   position: absolute;
   top: 100%;
-  left: 0;
+  left: -100%;
   width: 100%;
   height: auto;
   padding: 20px 0;
   border-bottom: 1px solid #d6d6d6;
   background-color: #fff;
   transform: translateX(-100%);
+  transition: transform 0.5s, left 0.5s;
   z-index: 3;
-  transition: all 0.5s;
   pointer-events: none;
 }
 
 .header__nav--active {
   top: 100%;
+  left: 0;
   transform: translateX(0);
   pointer-events: all;
 }
